@@ -10,7 +10,8 @@ version_rel_year = 2009
 version_rel_month = 8
 version_rel_day = 26
 version_rel_hour = 00
-verstion_rel_time_zone = Pacific/Auckland
+version_rel_time_zone = Pacific/Auckland
+twitter_hash_tags = #perl #cpan
 
 [Prereqs]
 Moose = 0.90
